<resources>
    <string name="app_name">proyectoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vivac</string>
    <string name="nav_header_subtitle">info@vivac.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_salas">Salas</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_localizacion">Localizacion</string>
    <string name="textoDescripcionLocalizacion">Vivac es una empresa que permite la reserva de diferentes acamapadas. Asiste a nuestras oficinas y podrás consultarnos cualquier duda, desde como usar la aplicación a como crear tu propio camping promocionarlo en nuestra web. <br> </br></string>
    <string name="enlaceCercanias"> Trenes de cercanías </string>
    <string name="enlaceBusCadiz">  Autobús desde Jerez </string>
    <string name="enlaceBusJerez"> Autobús desde Cádiz </string>
    <string name="direccionip">192.168.3.58:8080</string>
    <string-array name="lugares">
        <item>Acebedo</item>
        <item>Cerromulera</item>
        <item>Ordesa</item>
        <item>Bueida</item>
        <item>Covão DAmetade</item>
        <item>Navaleno</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="muestraoculta">Mostrar/Ocultar</string>
    <string name="horasalidatexto">"Hora de salida "</string>
    <string name="horaentradatexto">"Hora de entrada "</string>
    <string name="fechasalidatexto">"Fecha de salida "</string>
    <string name="fechallegadatexto">"Fecha de llegada "</string>
    <string name="nombretexto">"Nombre "</string>
    <string name="dnitexto">"DNI "</string>
    <string name="emailtexto">"Correo electrónico "</string>
    <string name="telefonotexto">"Teléfono "</string>
    <string name="numpersonastexto">"Número de personas "</string>
    <string name="comentariotexto">"Comentario extra "</string>
    <string name="creanuevareserva">Crea una nueva reserva</string>
    <string name="hechoporvivac">Hecho por VIVAC Company ©</string>
    <string name="descargapdf">Descarga el PDF</string>
    <string name="instalaciontexto">Instalación</string>
    <string name="disponibletexto">Disponible</string>
    <string name="aguatexto">Agua corriente</string>
    <string name="sitexto">Sí</string>
    <string name="luztexto">Luz</string>
    <string name="piscinatexto">Piscina</string>
    <string name="sombratexto">Sombra</string>
    <string name="editartexto">EDITAR</string>
    <string name="eliminartexto">ELIMINAR</string>
</resources>