<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vivac.proyectofinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_salas"
        android:name="com.vivac.proyectofinal.ui.salas.SalasFragment"
        android:label="@string/menu_salas"
        tools:layout="@layout/fragment_salas" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.vivac.proyectofinal.ui.reservas.ReservasFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_localizacion"
        android:name="com.vivac.proyectofinal.ui.localizacion.LocalizacionFragment"
        android:label="@string/menu_localizacion"
        tools:layout="@layout/fragment_localizacion" />


</navigation>