<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_salas"
            android:icon="@drawable/ic_salas"
            android:title="@string/menu_salas" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/ic_reservas"
            android:title="Mis reservas" />
        <item
            android:id="@+id/nav_masreservas"
            android:icon="@drawable/ic_nuevareserva"
            android:title="Añade una reserva" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_localizacion" />

    </group>
</menu>