<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="549dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewNombreSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="texto con el nombre de la sala"
            android:textAlignment="center"

            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imagenViewSala"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/sala1"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombreSala"
            tools:layout_editor_absoluteX="8dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="texto con el subtitulo de la sala"
            android:textAlignment="center"

            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDescSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:text="texto con la desc de la sala"
            android:textAlignment="center"

            android:textSize="15sp" />

        <TableLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/instalaciontexto"

                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/disponibletexto"

                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/aguatexto"
                    />

                <TextView
                    android:id="@+id/textTablaAgua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sitexto"
                     />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/luztexto"
                     />

                <TextView
                    android:id="@+id/textTablaLuz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sitexto"
                     />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/piscinatexto"
                     />

                <TextView
                    android:id="@+id/textTablaPiscina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sitexto"
                     />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sombratexto"
                     />

                <TextView
                    android:id="@+id/textTablaSombra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sitexto"
                     />
            </TableRow>

        </TableLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>